# tellme

./: .gitignore  README.md  pyproject.toml  requirements.txt
packaging/: install.sh  tellme.service
scripts/: get-voice.sh
tellme/: __init__.py  __main__.py  app.py  config.py  phrases.py  prefs.py  scheduler.py  speaker.py  tray.py
tellme/calendars/: __init__.py  aggregator.py  base.py  eds.py  google_api.py
tests/: test_aggregator.py  test_config.py  test_phrases.py  test_scheduler.py
